--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,6 +24,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/pg": "^8.11.13",
     "drizzle-kit": "catalog:",
+    "tsx": "^4.19.4",
     "typescript": "catalog:"
   }
 }
