--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,20 +1,23 @@
 packages:
-  - "apps/*"
-  - "packages/*"
-
+  - apps/*
+  - packages/*
 catalog:
   lucide-react: ^0.451.0
-  "tailwindcss": 4.0.14
-  "@tailwindcss/cli": 4.0.14
+  tailwindcss: 4.0.14
+  '@tailwindcss/cli': 4.0.14
   typescript: ^5.8.2
-  "@types/node": ^22
+  '@types/node': ^22
   drizzle-orm: 0.41.0
   drizzle-kit: 0.30.6
   zod: 3.24.3
-  next: 15.3.1-canary.7
-  react: 19.2.0-canary-1d6c8168-20250411
-  react-dom: 19.2.0-canary-1d6c8168-20250411
-  "@types/react": ^19
-  "@types/react-dom": ^19
+  next: latest
+  react: latest
+  react-dom: latest
+  '@types/react': ^19
+  '@types/react-dom': ^19
   react-hook-form: ^7.52.2
-  "@biomejs/biome": 2.0.0-beta.1
+  '@biomejs/biome': 2.0.0-beta.1
+onlyBuiltDependencies:
+  - '@parcel/watcher'
+  - esbuild
+  - sharp
